--- a/serverless/co1_django/Dockerfile
+++ b/serverless/co1_django/Dockerfile
@@ -7,4 +7,6 @@ RUN pip install -r requirements.txt
 
 COPY . /code/
 
-CMD python manage.py runserver
+EXPOSE 8000
+
+CMD python manage.py runserver 0.0.0.0:8000
